--- a/NetFramwork_WildNature/Web.config
+++ b/NetFramwork_WildNature/Web.config
@@ -66,6 +66,9 @@
   </entityFramework>
   <connectionStrings>
     <add name="WildNature" connectionString="data source=DESKTOP-82HE9M3\MSSQLSERVER01;initial catalog=QuanLyWebDongVat;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="QuanLyWebDongVatEntities" connectionString="metadata=res://*/Db.WildNature.csdl|res://*/Db.WildNature.ssdl|res://*/Db.WildNature.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-82HE9M3\MSSQLSERVER01;initial catalog=QuanLyWebDongVat;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="WildNatureEntities" connectionString="metadata=res://*/Models.WildNature.csdl|res://*/Models.WildNature.ssdl|res://*/Models.WildNature.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-82HE9M3\MSSQLSERVER01;initial catalog=QuanLyWebDongVat;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="QuanLyWebDongVatEntities1" connectionString="metadata=res://*/Db.WildNature.csdl|res://*/Db.WildNature.ssdl|res://*/Db.WildNature.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-82HE9M3\MSSQLSERVER01;initial catalog=QuanLyWebDongVat;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.codedom>
     <compilers>
