--- a/NetFramwork_WildNature/Web.config
+++ b/NetFramwork_WildNature/Web.config
@@ -15,6 +15,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="/Admin/Login/Login"></forms>
+    </authentication>
     <compilation debug="true" targetFramework="4.8.1" />
     <httpRuntime targetFramework="4.8.1" />
   </system.web>
@@ -69,6 +72,7 @@
     <add name="QuanLyWebDongVatEntities" connectionString="metadata=res://*/Db.WildNature.csdl|res://*/Db.WildNature.ssdl|res://*/Db.WildNature.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-82HE9M3\MSSQLSERVER01;initial catalog=QuanLyWebDongVat;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="WildNatureEntities" connectionString="metadata=res://*/Models.WildNature.csdl|res://*/Models.WildNature.ssdl|res://*/Models.WildNature.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-82HE9M3\MSSQLSERVER01;initial catalog=QuanLyWebDongVat;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="QuanLyWebDongVatEntities1" connectionString="metadata=res://*/Db.WildNature.csdl|res://*/Db.WildNature.ssdl|res://*/Db.WildNature.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-82HE9M3\MSSQLSERVER01;initial catalog=QuanLyWebDongVat;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Model1" connectionString="data source=DESKTOP-82HE9M3\MSSQLSERVER01;initial catalog=QuanLyWebDongVat;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.codedom>
     <compilers>
